<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fullscreen_content1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:gravity="center">


        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/users"/>

        <TextView
            android:id="@+id/signUpMainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:text="@string/sign_up_title"
            android:textColor="@color/offWhite"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signUpDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/sign_up_description"
            android:textColor="@color/description"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_first_name"
            android:inputType="textPersonName"
            android:textColor="#7383BF"
            android:textColorHint="#556080" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_last_name"
            android:inputType="textPersonName"
            android:textColor="#7383BF"
            android:textColorHint="#556080" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress"
            android:textColor="#7383BF"
            android:textColorHint="#556080" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_text_password"
            android:textColor="#7383BF"
            android:textColorHint="#556080"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/sign_in_sign_in_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/sign_in_button_background"
            android:padding="15dp"
            android:text="@string/sign_up_title"
            android:textColor="@drawable/sign_in_button_text_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>